update map cage size and update animaluser service and handle map array
