# backend/cmd/main/docs/swagger.json
@@ -366,7 +366,7 @@
                 }
             }
         },
-        "/api/hotel/cleint/{hotel_service_id}": {
+        "/api/hotel/cleint/{id}": {
             "put": {
                 "security": [
                     {
@@ -385,7 +385,7 @@
                     {
                         "type": "string",
                         "description": "Hotel Service ID",
-                        "name": "hotel_service_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -434,7 +434,7 @@
                 }
             }
         },
-        "/api/hotel/client/{hotel_service_id}/{status}": {
+        "/api/hotel/client/{id}/{status}": {
             "get": {
                 "security": [
                     {
@@ -452,8 +452,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID",
-                        "name": "hotel_service_id",
+                        "description": "User ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -478,7 +478,7 @@
                 }
             }
         },
-        "/api/hotel/{hotel_service_id}": {
+        "/api/hotel/{id}": {
             "get": {
                 "security": [
                     {
@@ -496,8 +496,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID",
-                        "name": "hotel_service_id",
+                        "description": "Hotel Service ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -532,7 +532,7 @@
                     {
                         "type": "string",
                         "description": "Hotel Service ID",
-                        "name": "hotel_service_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -550,7 +550,7 @@
                 }
             }
         },
-        "/api/hotel/{hotel_service_id}/{status}": {
+        "/api/hotel/{id}/{status}": {
             "get": {
                 "security": [
                     {
@@ -568,8 +568,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "ID",
-                        "name": "hotel_service_id",
+                        "description": "Profile ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -727,6 +727,50 @@
                         "type": "string",
                         "description": "ID",
                         "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/api/user/animal/{user_id}/{animal_type}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "get animal of each user filter by animal type",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get Animal User By Animal Type",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Animal Type",
+                        "name": "animal_type",
                         "in": "path",
                         "required": true
                     }
