# backend/internal/model/hotel.go
@@ -10,19 +10,28 @@ import (
 // }
 
 type CageRoom struct {
-	ID uint `gorm:"primaryKey; autoIncrement" json:"id" param:"id" query:"id"`
-	// HotelID       uint           `gorm:"not null" json:"hotel_id" query:"hotel_id"`
-	ProfileID     uint           `gorm:"not null" json:"profile_id" query:"profile_id"`
-	Quantity      int            `gorm:"type:int;not null" json:"quantity" query:"quantity"`
-	Price         float32        `gorm:"type:float;not null" json:"price" query:"price"`
-	Size          string         `gorm:"type:varchar(191);not null" json:"size" query:"size"`
-	SizeDetail    string         `gorm:"type:text;not null" json:"size_detail" query:"size_detail"`
-	AnimalType    string         `gorm:"type:varchar(191);not null" json:"animal_type" query:"animal_type"`
-	Max           int            `gorm:"type:int;not null" json:"max" query:"max"`
-	Image         string         `gorm:"type:text" json:"image" query:"image"`
-	CageType      string         `gorm:"type:varchar(191);not null" json:"cage_type" query:"cage_type"`
-	Facility      string         `gorm:"type:text;" json:"facility" query:"facility"`
+	ID          uint    `gorm:"primaryKey; autoIncrement" json:"id" param:"id" query:"id"`
+	ProfileID   uint    `gorm:"not null" json:"profile_id" query:"profile_id"`
+	Quantity    int     `gorm:"type:int;not null" json:"quantity" query:"quantity"`
+	CageType    string  `gorm:"type:varchar(191);not null" json:"cage_type" query:"cage_type"`
+	Price       float32 `gorm:"type:float;not null" json:"price" query:"price"`
+	Detail      string  `gorm:"type:text;" json:"detail" query:"detail"`
+	Image       string  `gorm:"type:text" json:"image" query:"image"`
+	Facility    string  `gorm:"type:text;" json:"facility" query:"facility"`
+	AnimalType  string  `gorm:"type:varchar(191);not null" json:"animal_type" query:"animal_type"`
+	MaxCapacity int     `gorm:"type:int;not null" json:"max_capacity" query:"max_capacity"`
+
+	// size
+	Length float32 `gorm:"type:float;not null" json:"lenth" query:"lenth"`
+	Width  float32 `gorm:"type:float;not null" json:"width" query:"width"`
+	Height float32 `gorm:"type:float;not null" json:"height" query:"height"`
+	Size   string  `gorm:"type:varchar(191);not null" json:"size" query:"size"`
+
 	HotelServices []HotelService `gorm:"foreignKey:CageID;references:ID;constraint:OnUpdate:CASCADE;not null" json:"hotel_services" query:"hotel_services"`
+
+	// no in database
+	ImageArray    []string `gorm:"-" json:"image_array" query:"image_array"`
+	FacilityArray []string `gorm:"-" json:"facility_array" query:"facility_array"`
 }
 
 type HotelService struct {
